[package]
name = "bevy_mod_picking"
version = "0.5.2"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A 3D mouse picking and raycasting plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "raycast"]
categories = ["game-engines", "rendering"]
resolver = "2"

[dependencies]
bevy = { version = "0.6", default-features = false, features = [
    "render",
] }
bevy_mod_raycast = { git = "https://github.com/exjam/bevy_mod_raycast", branch = "allow_bevy_patch" }

[dev-dependencies]
bevy = { version = "0.6", default-features = false, features = [
    "bevy_winit",
    "x11",
] }
